--- a/src/lang/pt.json
+++ b/src/lang/pt.json
@@ -1,14 +1,64 @@
 {
-  "dashboard": {
-    "home": {
-      "title": "Bem vindo",
-      "message": "Aqui estão algumas informações importantes sobre seu sistema.",
-      "expired": "Documentos expirados",
-      "expiring": "Documentos expirando"
-    }
-  },
-  "name": "Nome",
-  "validUntil": "Válido até",
-  "entryTypes": "Veículo/Fornecedor",
-  "seeAll": "Ver todos"
+	"active": "Ativo",
+	"add": "Adicionar",
+	"back": "Voltar",
+	"categories": "Categorias",
+	"category": "Categoria",
+	"clickHere": "Clique aqui",
+	"confirm": "Confirma",
+	"confirmActionMessage": "Esta ação é irreversível, deseja mesmo continuar?",
+	"createCategory": "Adicionar categoria",
+	"createDocument": "Adicionar documento",
+	"createInvestment": "Adicionar investimento",
+  "createProvider": "Adicionar fornecedor",
+  "createVehicle": "Adicionar veículo",
+	"dashboard": {
+		"home": {
+			"title": "Bem vindo",
+			"message": "Aqui estão algumas informações importantes sobre seu sistema.",
+			"expired": "Documentos expirados",
+			"expiring": "Documentos expirando"
+		}
+	},
+	"date": "Date",
+	"delete": "Excluir",
+	"deleteDocuments": "Excluir documentos",
+	"deleteItem": "Excluir item",
+	"deleteInvestment": "Excluir investimento",
+	"deleteProviders": "Excluir fornecedores",
+	"deleteVehicles": "Excluir veículos",
+	"description": "Descrição",
+	"document": "Documento",
+	"documents": "Documents",
+	"documentNumber": "CNPJ/CPF",
+	"entryTypes": "Veículo/Fornecedor",
+	"expired": "Expirado",
+	"expires": "Expirável",
+	"expiresIn": "Expira em",
+	"expirationDate": "Data de expiração",
+	"filters": "Filtros",
+	"generalInfo": "Informações gerais",
+	"initialDate": "Data de início",
+	"investment": "Investimento",
+	"investments": "Investimentos",
+	"month": "Mês",
+	"name": "Nome",
+	"provider": "Fornecedor",
+	"providers": "Fornecedores",
+	"published": "Publicado",
+	"search": "Pesquisar",
+	"seeAll": "Ver todos",
+	"slug": "Atalho",
+	"status": "Status",
+	"submit": "Enviar",
+	"total": "Total",
+	"type": "Tipo",
+	"unpublished": "Despublicado",
+	"uploadDate": "Data de upload",
+	"validUntil": "Válido até",
+	"value": "Valor",
+	"vehicle": "Veículo",
+	"vehicles": "Veículos",
+  "visibility": "Visibilidade",
+	"year": "Ano"
 }
