--- a/src/lang/pt.json
+++ b/src/lang/pt.json
@@ -5,7 +5,8 @@
 	"address": "Endereço",
 	"events": {
 		"DOCUMENT_REQUESTED": "Novo documento solicitado",
-		"DOCUMENT_RECEIVED": "Document recebido aguardando aprovação"
+		"DOCUMENT_RECEIVED": "Document recebido aguardando aprovação",
+		"DOCUMENT_LOADED_FROM_API": "Novo documento carregado pela API"
 	},
 	"attribute": {
 		"title": "Atributo",
@@ -111,6 +112,9 @@
 		"plural": "Documentos",
 		"create": "Adicionar Documento",
 		"delete": "Excluir Documento",
+		"messages": {
+			"updating": "O sistema está atualizando o documento e você será notificado quando terminar."
+		},
 		"deleteDialog": {
 			"title": "Excluir Documento",
 			"description": "Deseja mesmo excluir o documento {{ name }}? Lembre-se esta ação não é reversível."
