form disable and link improvements

--- a/src/lang/pt.json
+++ b/src/lang/pt.json
@@ -47,7 +47,7 @@
 				"multiselect": "Múltipla seleção",
 				"plainText": "Texto",
 				"date": "Data",
-				"boolean": "Booleano",
+				"boolean": "Boleano",
 				"numeric": "Numérico",
 				"reference": "Referência"
 			}
