--- a/src/lang/pt.json
+++ b/src/lang/pt.json
@@ -83,7 +83,11 @@
 		"title": "Canal",
 		"plural": "Canais",
 		"create": "Adicionar Canal",
-		"delete": "Excluir Canal"
+		"delete": "Excluir Canal",
+		"dialog": {
+			"title": "Vincule o cadastro aos canais disponíveis."
+		},
+		"availability": "Disponível em {{ available }} de {{ total }} canais."
 	},
 	"clickHere": "Clique aqui",
 	"configurationType": "Tipo de configuração",
@@ -164,6 +168,7 @@
 			"JUCESP": "Junta Comercial / SP / Certidão Simplificada"
 		}
 	},
+	"manage": "Gerenciar",
 	"isActive": "Ativo",
 	"documentNumber": "CNPJ/CPF",
 	"email": "Email",
